# hackathon2512

./: .dockerignore  .env  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASE.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-exe.yml  build.py  ci.yml  release.yml
core/agents/: smart_router.py
core/agents/agent_memory/: __init__.py  memory.py
core/agents/code_agent/: __init__.py  agent.py  code_parser.py  default_prompt.py
core/agents/gui_agent/: __init__.py  action_parser.py  agent.py  default_prompt.py
core/computer/: README.md
core/computer/code/: README.md  __init__.py  base_language.py  code.py
core/tools/: __init__.py  base_tool.py  tools_registry.py
core/ui/: app.py  visualizer.py
docs/: PRODUCT_STRATEGY.md  ROADMAP.md
memory_storage/code_agent/: CodeAgent_function_stats.json  CodeAgent_insights.json
memory_storage/gui_agent/: GUIAgent_insights.json
scripts/: release_bundle.py
src/argus/: __main__.py  bootstrap.py  config.py  doctor.py  runtime.py
test/: example_usage.py  导包指南.md
test/bash_test/: README_PowerShell_Test.md  example_usage.py  import_examples.py  simple_import_example.py  test_powershell.py  test_powershell_enhanced.py  test_powershell_final.py  test_powershell_simple.py  测试总结.md
test/gui_agent_test/: main.py  test.py
test/screen_test/: README.md  run_test.py  start.py  test_screen.py  view_images.py
tests/: test_base_tool.py  test_code_parser.py  test_doctor.py
(+65 files in other folders)
